make test run on jdk8